tests/src/snapshots/fe_compiler_tests__compile_errors__call_undefined_function_on_contract.snap
---
source: tests/src/compile_errors.rs
expression: "error_string(\"[snippet]\", &src)"

---


UndefinedValue on line 3
[31mself.doesnt_exist()[0m
