tests/src/snapshots/fe_compiler_tests__compile_errors__circular_dependency_create.snap
---
source: tests/src/compile_errors.rs
expression: "error_string(&path, &src)"

---


CircularDependency on line 3
foo: Foo = [31mFoo.create(0)[0m
