tests/src/snapshots/fe_compiler_tests__compile_errors__circular_dependency_create2.snap
---
source: tests/src/compile_errors.rs
expression: "error_string(&path, &src)"

---


CircularDependency on line 3
foo: Foo = [31mFoo.create2(2, 0)[0m
