tests/src/snapshots/fe_compiler_tests__compile_errors__continue_without_loop_2.snap
---
source: tests/src/compile_errors.rs
expression: "error_string(\"[snippet]\", &src)"

---
error: `continue` outside of a loop
  ┌─ [snippet]:4:5
  │
4 │     continue
  │     ^^^^^^^^ cannot `continue` outside of a `for` or `while` loop


