tests/src/snapshots/fe_compiler_tests__compile_errors__duplicate_contract_in_module.snap
---
source: tests/src/compile_errors.rs
expression: "error_string(&path, &src)"

---


AlreadyDefined on line 0
no error context available
