tests/src/snapshots/fe_compiler_tests__compile_errors__duplicate_event_in_contract.snap
---
source: tests/src/compile_errors.rs
expression: "error_string(&path, &src)"

---


AlreadyDefined on line 5
event MyEvent:
        idx addr1: address
